# NEUROSEG

./: .gitignore  README.md  pyproject.toml
logs/H2/: logs.md
notebooks/: bimap-h2-draft.ipynb  eb-jepa-neurofinder (1).ipynb  mvp.ipynb  v1.0.0.ipynb  v1.0.1.ipynb  v1.0.2.ipynb
src/: data_loader.py  main.py  segmenter.py
src/models/: calcium_recording.py
src/neuroseg/: calcium_recording.py  main.py  segmenter.py
src/utils/: EB_JEPA_NEUROFINDER.py
