[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroseg"
version = "0.0.1"
requires-python = ">=3.10.0"
dependencies = [
    "cellpose>=4.1.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "tifffile>=2025.5.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
